Fix ios overflow

--- a/src/components/Heading/index.css
+++ b/src/components/Heading/index.css
@@ -2,7 +2,7 @@ h1,
 h2,
 h3,
 h4 {
-  margin-block: 0;
+  margin: 0;
 }
 
 .heading {
