--- a/src/pages/Home/ProjectSummary.css
+++ b/src/pages/Home/ProjectSummary.css
@@ -1,6 +1,6 @@
 .project-summary {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   max-height: 1080px;
   padding-bottom: var(--spaceL);
   margin: 120px 0;
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: center;
   outline: none;
+  overflow-x: hidden;
 }
 
 .project-summary--first {
