--- a/src/pages/SmartSparrow/Earth.css
+++ b/src/pages/SmartSparrow/Earth.css
@@ -8,6 +8,7 @@
   grid-template: 100% / 100%;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 .earth__canvas {
@@ -64,13 +65,14 @@
 }
 
 .earth__section {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-shadow: 0 0 6px rgb(var(--rgbBlack));
+  overflow-x: hidden;
 }
 
 .earth__section--scrim {
